# wos-jump-clock

./: .gitignore  README.md  pyproject.toml
src/: main.py  time_conversions.py  unit_conversions.py  upgrade_table.py
src/data/: constants.py  data.csv  data_inspection.ipynb  dependencies.py  validate_data.py
