[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wos-jump-clock"
version = "0.0.1"
authors = [
  { name="Adrian Schemel", email="adrian.schemel888@gmail.com" },
]
description = "A countdown timer for Whiteout Survival"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/AdrianUlrich/wos-jump-clock"
Issues = "https://github.com/AdrianUlrich/wos-jump-clock/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = ["*.json", "archive.csv", "*.ipynb"]
